--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -30,7 +30,7 @@ body {
   /*
   height: 133.33%;
   position: absolute;
-  top: 0;
+  top: 0; 
   left: 0; */
 }
 
@@ -120,9 +120,24 @@ body {
 
 /* Dashboard Styles */
 .dashboard {
+  /* transform: scale(0.5);
+  transform-origin: top left;
+  width: 200%; 
+
+  height: 200%; */
+
   display: flex;
   flex-direction: column;
-  gap: 2rem;
+  gap: 1rem;
+}
+
+@media screen and (max-width: 1366px) {
+  .dashboard {
+    transform: scale(0.5);
+    transform-origin: top left;
+    width: 200%; /* compensate for the scale shrink */
+    height: 100vh;
+  }
 }
 
 .stats-grid {
